# gnucash_reports

./: .gitignore  LICENSE  README.md  first_figure.html  main.py  setup.cfg
.virtualenv/: pyvenv.cfg
components/: __init__.py  account_store_block.py  base_block.py  forecast_block.py  transaction_store_block.py  transactions_table_block.py
core/: __init__.py  account_data.py  account_data_Item.py  simple_transaction.py  transaction_data.py  transaction_data_item.py  transaction_journal.py  typings.py
tests/: test_piecash_helper.py
tests/components/: test_base_block.py  test_forecast_block.py  test_transaction_table_block.py
tests/core/: mock_recurrence.py  test_simple_transaction.py  test_transaction_data.py  test_transaction_data_item.py  test_transaction_journal.py
tests/fixtures/: sample_data.gnucash
