[metadata]
name = gnucash-reports
version = 0.1
author = guilhermevrs
author-email = guilhermevrs@gmail.com
summary = Code for gnucash-reports
description-file = README.md
home-page = https://github.com/guilhermevrs/gnucash-reports
requires-dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging


[options]
packages = find:
install_requires = 
    piecash
setup_requires =
    pytest-runner
tests_requires =
    pytest

[options.extras_require]
dev =
    pytest
    pylint

[options.packages.find]
exclude = tests

[build_sphinx]
project = gnucash-reports
release = 0.1.0
copyright = Copyright 2021 Guilherme Vieira Schwade
config-dir = docs

[aliases]
test=pytest
